Development
    Update media label on drag and drop, update title bar on stop/play
    Add some more known metadata and make some values more dynamic
    Implement org.mpris.MediaPlayer2.TrackList Tracks and CanEditTracks properties
    Version bump to 1.0.7a1
    Implement MPRIS Rate, MinimumRate and MaximumRate, requires gmtk SVN r115 or higher
    Cleanup some debug messages and send updated Metadata on cover art fetch
    Rework cover_art fetch process, should work much better now, also make art available over MPRIS
    Fix crash at end of media, due to invalid store iter
    Implement MPRIS Volume signal
    Implement MPRIS2 CanSeek, CanGoNext, CanGoPrevious, Seek, OpenUri, SetPosition, and more Metadata
    Implement some MPRIS2 metadata attributes
    Implement MPRIS2 events org.mpris.MediaPlayer2.Player, properties Volume, Get (PlaybackStatus), and signal (PlaybackStatus Changed) 
    Implement MPRIS2 events Raise, Quit, Set (Fullscreen)
    Fix error spotted by clang
    Start work on MPRIS dbus interface http://specifications.freedesktop.org/mpris-spec/latest/
	Change controlid logic
    Do not run mencoder when being called by plugin
    Monitor sub visiblity better gnome-mplayer Issue #615, requires gmtk SVN r112 or higher to work correctly
    Add mouse events to capture over the media window, should fix Issue #611
    Fix Issue #613
    Fix a couple of keyboard shortcuts as they were in the wrong shift state #,+,{,}
	Fix usage of NULL pointer in nautilus property page
	Initialize a variable to NULL
    Globally initialize libCURL
    Don't update cover art when URL call fails
    Set the use-symbolic property on the GtkVolumeButton in GTK3
    Fix button sensitivity based on state
    More symbolic icon fixes
    Use the GTK3 symbolic icons when running in GTK3 mode
1.0.6
    Apply patch from David Coppa that removes the depreciated slide away code
    Separate delete and destroy events
    Updated Portuguese translation